Fixed issue with hero image dropping below navbar on smaller screens

--- a/assets/style.css
+++ b/assets/style.css
@@ -144,7 +144,7 @@ nav a:hover {
     ul {
         position: fixed;
         width: 100%;
-        height: 100vh;
+        height: 50vh;
         background: #BEADA6;
         top: 80px;
         left: -100%;
@@ -161,22 +161,33 @@ nav a:hover {
         font-size: 30px;
     }
 
-    #nav-toggle:checked ~ ul {
+    #nav-toggle:checked~ul {
         left: 0;
     }
 
+    #social-networks {
+        text-align: center;
+        padding: 20px 0;
+        display: flex;
+        justify-content: space-evenly;
+        list-style-type: none;
+    }
 
     #social-networks i {
         font-size: 160%;
         padding: 5%;
         color: #000;
     }
-
 }
 
-@media screen and (max-width: 350px) {
+@media screen and (max-width: 422px) {
     #hero-section {
         width: 100%;
         height: 400px;
+    }
+
+    label.home {
+        padding: 0 50px;
+        font-size: 20px;
     }
 }
